Implementation of basic structure.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
         <header>
             <h1>StopWatch & Timer App</h1>
         </header>
+        <main>
+            <div>
+                <h1>Display</h1>
+            </div>
+            <div>
+                <button>Start</button>
+                <button>Stop</button>
+            </div>
+
+            <div>
+                <button>Reset</button>
+                <button>Get Time</button>
+            </div>
+
+            <div>
+                <button>Clear Time</button>
+            </div>
+            
+        </main>
     </center>
   </body>
 </html>
