Added the classes and id's to btn and p tag.

--- a/index.html
+++ b/index.html
@@ -89,28 +89,16 @@
     </style>
   </head>
   <body>
-    <center>
-      <header>
-        <h1>StopWatch & Timer App</h1>
-      </header>
-      <main>
-        <div>
-          <h1>Display</h1>
-        </div>
-        <div>
-          <button>Start</button>
-          <button>Stop</button>
-        </div>
-
-        <div>
-          <button>Reset</button>
-          <button>Get Time</button>
-        </div>
-
-        <div>
-          <button>Clear Time</button>
-        </div>
-      </main>
-    </center>
+    <section>
+      <p id="countDown">0</p>
+      <div class="buttons">
+        <button class="start_btn">Start</button>
+        <button class="reset_btn">Reset</button>
+        <button class="stop_btn">Stop</button>
+        <button class="time_btn">getTime</button>
+        <button class="clear_btn">clearTime</button>
+      </div>
+      <div class="resetValue"></div>
+    </section>
   </body>
 </html>
