Taking the references of all id's and classes.

--- a/index.html
+++ b/index.html
@@ -100,5 +100,27 @@
       </div>
       <div class="resetValue"></div>
     </section>
+    <script>
+      //=====////=====// Starting of taking the references of all id's and classes. //=====////=====//
+
+      const accCountDown = document.getElementById("countDown");
+      console.log(accCountDown); // Getting the p tag on console;
+      const accStartBtn = document.querySelector(".start_btn");
+      console.log(accStartBtn); // Getting the btn tag on console;
+      const accResetBtn = document.querySelector(".reset_btn");
+      console.log(accResetBtn); // Getting the btn tag on console;
+      const accStopBtn = document.querySelector(".stop_btn");
+      console.log(accStopBtn); // Getting the btn tag on console;
+      const accGetTimeBtn = document.querySelector(".time_btn");
+      console.log(accGetTimeBtn); // Getting the btn tag on console;
+      const accClearBtn = document.querySelector(".clear_btn");
+      console.log(accClearBtn); // Getting the btn tag on console;
+      const accResetValue = document.querySelector(".resetValue");
+      console.log(accResetValue); // Getting the btn tag on console;
+
+      //=====////=====// Ending of taking the references of all id's and classes. //=====////=====//
+
+      //////*******************************************************************************************************//////
+    </script>
   </body>
 </html>
