--- a/index.html
+++ b/index.html
@@ -104,22 +104,48 @@
       //=====////=====// Starting of taking the references of all id's and classes. //=====////=====//
 
       const accCountDown = document.getElementById("countDown");
-      console.log(accCountDown); // Getting the p tag on console;
+      // console.log(accCountDown); // Getting the p tag on console;
       const accStartBtn = document.querySelector(".start_btn");
-      console.log(accStartBtn); // Getting the btn tag on console;
+      // console.log(accStartBtn); // Getting the btn tag on console;
       const accResetBtn = document.querySelector(".reset_btn");
-      console.log(accResetBtn); // Getting the btn tag on console;
+      // console.log(accResetBtn); // Getting the btn tag on console;
       const accStopBtn = document.querySelector(".stop_btn");
-      console.log(accStopBtn); // Getting the btn tag on console;
+      // console.log(accStopBtn); // Getting the btn tag on console;
       const accGetTimeBtn = document.querySelector(".time_btn");
-      console.log(accGetTimeBtn); // Getting the btn tag on console;
+      // console.log(accGetTimeBtn); // Getting the btn tag on console;
       const accClearBtn = document.querySelector(".clear_btn");
-      console.log(accClearBtn); // Getting the btn tag on console;
+      // console.log(accClearBtn); // Getting the btn tag on console;
       const accResetValue = document.querySelector(".resetValue");
-      console.log(accResetValue); // Getting the btn tag on console;
+      // console.log(accResetValue); // Getting the btn tag on console;
 
       //=====////=====// Ending of taking the references of all id's and classes. //=====////=====//
 
+      //////*******************************************************************************************************//////
+      //////*******************************************************************************************************//////
+
+      //=====////=====// Starting of defining the functions and firing on event listeners. //=====////=====//
+
+      // // // // FUNCTION TO START THE TIMER :-
+
+      const handlerOnStartBtn = () => {
+        let startCounting = 0; // Declaring the variable with assign 0 value;
+        setInterval(() => {
+          accCountDown.textContent = startCounting++; // Accessing the countDown id of p tag and adding the text to start count;
+        }, 1000); // Wrapping the countDown to setInterval for calling it repeatedly on every 1 second;
+      };
+
+      //=====////=====// Ending of defining the functions and firing on event listeners. //=====////=====//
+
+      //////*******************************************************************************************************//////
+      //////*******************************************************************************************************//////
+
+      //=====////=====// Starting of firing the even listeners on a click. //=====////=====//
+
+      accStartBtn.addEventListener("click", handlerOnStartBtn); // Firing the event listener on click and calling the function handlerOnStartBtn;
+
+      //=====////=====// Ending of firing the even listeners on a click. //=====////=====//
+
+      //////*******************************************************************************************************//////
       //////*******************************************************************************************************//////
     </script>
   </body>
