--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
         }, 1000); // Wrapping the countDown to setInterval for calling it repeatedly on every 1 second;
       };
 
+      ////////------------------------------------------------------------------------------------
+
+
+      // // // // FUNCTION TO RESET THE TIMER :-
+
+      const handlerOnResetBtn = () => {
+        startCounting = 0; // Reassigning the startCounting variable to 0;
+        accCountDown.textContent = startCounting; // Accessing the countDown id of p tag and adding the text to reset count to 0; 
+      };
+
       //=====////=====// Ending of defining the functions and firing on event listeners. //=====////=====//
 
       //////*******************************************************************************************************//////
@@ -142,6 +152,7 @@
       //=====////=====// Starting of firing the even listeners on a click. //=====////=====//
 
       accStartBtn.addEventListener("click", handlerOnStartBtn); // Firing the event listener on click and calling the function handlerOnStartBtn;
+      accResetBtn.addEventListener('click', handlerOnResetBtn); // Firing the event listener on click and calling the function handlerOnResetBtn;
 
       //=====////=====// Ending of firing the even listeners on a click. //=====////=====//
 
