--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="resetValue"></div>
     </section>
     <script>
-      let startCounting = 0; // Previously,the startCounting variable is declared inside the handlerOnStartBtn function. 
+      let startCounting = 0; // Previously,the startCounting variable is declared inside the handlerOnStartBtn function.
       // // // // Therefore, the reset btn is show the 0 one time and then continue startCounting from that number only not from 0;
       // // // // So, we have declare the startCounting variable outside the block scope to function scope to be accessible to all funciton;
 
@@ -142,14 +142,21 @@
 
       ////////------------------------------------------------------------------------------------
 
-
       // // // // FUNCTION TO RESET THE TIMER :-
 
       const handlerOnResetBtn = () => {
         startCounting = 0; // Reassigning the startCounting variable to 0;
-        accCountDown.textContent = startCounting; // Accessing the countDown id of p tag and adding the text to reset count to 0; 
+        accCountDown.textContent = startCounting; // Accessing the countDown id of p tag and adding the text to reset count to 0;
         clearInterval(interValID); // Clearing the setInterval to stop on reset btn and only show 0; Previously, it was showing the 0 one time and continuously counting again;
+      };
 
+      ////////------------------------------------------------------------------------------------
+
+      // // // // FUNCTION TO STOP THE TIMER IN BETWEEN THE COUNTING AND CLICK ON START BTN AGAIN TO CONTINUE COUNTING NOT FROM ZERO :-
+
+      const handlerOnStopBtn = () => {
+        accCountDown.textContent = startCounting; // Accessing the countDown id of p tag and adding the text to stop count. If again click to start btn start counting from the stop value not from 0;
+        clearInterval(interValID); // Clearing the setInterval to stop on continuous counting on stop btn or take a pause;
       };
 
       //=====////=====// Ending of defining the functions and firing on event listeners. //=====////=====//
@@ -160,8 +167,8 @@
       //=====////=====// Starting of firing the even listeners on a click. //=====////=====//
 
       accStartBtn.addEventListener("click", handlerOnStartBtn); // Firing the event listener on click and calling the function handlerOnStartBtn;
-      accResetBtn.addEventListener('click', handlerOnResetBtn); // Firing the event listener on click and calling the function handlerOnResetBtn;
-
+      accResetBtn.addEventListener("click", handlerOnResetBtn); // Firing the event listener on click and calling the function handlerOnResetBtn;
+      accStopBtn.addEventListener("click", handlerOnStopBtn); // Firing the event listener on click and calling the function handlerOnStopBtn;
       //=====////=====// Ending of firing the even listeners on a click. //=====////=====//
 
       //////*******************************************************************************************************//////
