--- a/index.html
+++ b/index.html
@@ -4,89 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StopWatch</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      html {
-        color: #fff;
-        font-size: 62.5%;
-      }
-
-      body {
-        height: 100vh;
-        background-color: #3b4156;
-        font-family: "Urbanist", sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      h1 {
-        font-size: 3.6rem;
-        margin-top: 4.8rem;
-      }
-      hr {
-        margin-bottom: 3.2rem;
-      }
-      p,
-      li,
-      button {
-        font-size: 1.7rem;
-        letter-spacing: 0.1rem;
-        font-family: "Urbanist", sans-serif;
-        line-height: 1.6;
-      }
-      button {
-        background-color: #f5ee62;
-        padding: 0.6rem 2.4rem;
-        border-radius: 10rem;
-        margin-right: 3.6rem;
-        cursor: pointer;
-        transition: all 0.3s linear;
-
-        &:hover {
-          box-shadow: inset 0 0 0 0.2rem #f5ee62;
-          background-color: transparent;
-          color: #f5ee62;
-        }
-      }
-
-      section {
-        width: 32rem;
-        height: 48rem;
-        background-color: #21232e;
-        text-align: center;
-        padding: 2.4rem;
-        border-radius: 1rem;
-        box-shadow: 0 1px 0px #343650, 0 2px 0px #343650, 0 3px 0px #343650,
-          0 4px 0px #343650, 0 5px 0px #343650, 0 6px 0px #343650,
-          0 7px 0px #343650, 0 8px 0px #343650, 0 9px 0px #343650,
-          0 10px 0px #343650;
-      }
-      p {
-        color: #fb6087;
-        font-size: 9.8rem;
-      }
-      .buttons {
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 0 2.4rem;
-      }
-      button {
-        background-color: #fff;
-        margin: 0;
-        box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
-      }
-      .resetValue p {
-        font-size: 1.8rem;
-        margin-top: 0.6rem;
-      }
-    </style>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <section>
@@ -100,107 +18,6 @@
       </div>
       <div class="resetValue"></div>
     </section>
-    <script>
-      let startCounting = 0; // Previously,the startCounting variable is declared inside the handlerOnStartBtn function.
-      // // // // Therefore, the reset btn is show the 0 one time and then continue startCounting from that number only not from 0;
-      // // // // So, we have declare the startCounting variable outside the block scope to function scope to be accessible to all funciton;
-
-      let interValID; // Making accessible to all;
-
-      //=====////=====// Starting of taking the references of all id's and classes. //=====////=====//
-
-      const accCountDown = document.getElementById("countDown");
-      // console.log(accCountDown); // Getting the p tag on console;
-      const accStartBtn = document.querySelector(".start_btn");
-      // console.log(accStartBtn); // Getting the btn tag on console;
-      const accResetBtn = document.querySelector(".reset_btn");
-      // console.log(accResetBtn); // Getting the btn tag on console;
-      const accStopBtn = document.querySelector(".stop_btn");
-      // console.log(accStopBtn); // Getting the btn tag on console;
-      const accGetTimeBtn = document.querySelector(".time_btn");
-      // console.log(accGetTimeBtn); // Getting the btn tag on console;
-      const accClearBtn = document.querySelector(".clear_btn");
-      // console.log(accClearBtn); // Getting the btn tag on console;
-      const accResetValue = document.querySelector(".resetValue");
-      // console.log(accResetValue); // Getting the btn tag on console;
-
-      //=====////=====// Ending of taking the references of all id's and classes. //=====////=====//
-
-      //////*******************************************************************************************************//////
-      //////*******************************************************************************************************//////
-
-      //=====////=====// Starting of defining the functions and firing on event listeners. //=====////=====//
-
-      // // // // FUNCTION TO START THE TIMER :-
-
-      const handlerOnStartBtn = () => {
-        // let startCounting = 0; // Declaring the variable with assign 0 value;
-        interValID = setInterval(() => {
-          accCountDown.textContent = startCounting++; // Accessing the countDown id of p tag and adding the text to start count;
-        }, 1000); // Wrapping the countDown to setInterval for calling it repeatedly on every 1 second;
-      };
-
-      ////////------------------------------------------------------------------------------------
-
-      // // // // FUNCTION TO RESET THE TIMER :-
-
-      const handlerOnResetBtn = () => {
-        startCounting = 0; // Reassigning the startCounting variable to 0;
-        accCountDown.textContent = startCounting; // Accessing the countDown id of p tag and adding the text to reset count to 0;
-        clearInterval(interValID); // Clearing the setInterval to stop on reset btn and only show 0; Previously, it was showing the 0 one time and continuously counting again;
-      };
-
-      ////////------------------------------------------------------------------------------------
-
-      // // // // FUNCTION TO STOP THE TIMER IN BETWEEN THE COUNTING AND CLICK ON START BTN AGAIN TO CONTINUE COUNTING NOT FROM ZERO :-
-
-      const handlerOnStopBtn = () => {
-        handlerOnGetTimeBtn(); // Whenever the user click on stop btn also wanted to print or show that counted value on display; Or also printing the stop counted value;
-        accCountDown.textContent = startCounting; // Accessing the countDown id of p tag and adding the text to stop count. If again click to start btn start counting from the stop value not from 0;
-        clearInterval(interValID); // Clearing the setInterval to stop on continuous counting on stop btn or take a pause;
-      };
-
-      ////////------------------------------------------------------------------------------------
-
-      // // // // FUNCTION TO GET TIME MEANS THAT IF USER CLICK ON GET TIME BTN HE/SHE GET THE STOPPED COUNT VALUE PRINTED ON THE SCREEN DOWN-WARD :-
-
-      const handlerOnGetTimeBtn = () => {
-        // accResetValue.textContent = startCounting; // Getting value printed on the display after clear time button;
-        // // // Therefore, if you click the btn getTime the counted display number print on the below after clear time button;
-        let paraElem = document.createElement("p"); // Created new element i.e., p tag;
-        paraElem.classList.add("getTimeValue"); // Given className to new element;
-        // paraElem.textContent = startCounting; // Giving the current countDown value of display to be printed on new element;
-        // console.log(paraElem); // Getting printed countDowns on console whenever we click getTime btn;
-        // paraElem.textContent = `The getTime value is ${startCounting - 1}`; // With the help of Template Literals we have passed the text with exact value of getTime on click; Previously, when we click on the getTime btn we get the previous value not the current one;
-        paraElem.textContent = `The getTime value is ${startCounting}`;
-        accResetValue.append(paraElem); // Pushing the getTime value on resetValue id p tag with new element form i.e., p tag with className getTimeValue;
-      };
-
-      ////////------------------------------------------------------------------------------------
-
-      // // // // FUNCTION TO CLEAR THE TIME OF PRINTED VALUE ON THE BELOW DISPLAY/SCREEN :-
-
-      const handlerOnClearTimeBtn = () => {
-        accResetValue.innerHTML = ""; // Clearing all the printed timer values i.e., present below the clearTime btn of main display
-      };
-
-      //=====////=====// Ending of defining the functions and firing on event listeners. //=====////=====//
-
-      //////*******************************************************************************************************//////
-      //////*******************************************************************************************************//////
-
-      //=====////=====// Starting of firing the even listeners on a click. //=====////=====//
-
-      accStartBtn.addEventListener("click", handlerOnStartBtn); // Firing the event listener on click and calling the function handlerOnStartBtn;
-      accResetBtn.addEventListener("click", handlerOnResetBtn); // Firing the event listener on click and calling the function handlerOnResetBtn;
-      accStopBtn.addEventListener("click", handlerOnStopBtn); // Firing the event listener on click and calling the function handlerOnStopBtn;
-      accGetTimeBtn.addEventListener("click", handlerOnGetTimeBtn); // Firing the event listener on click and calling the function handlerOnGetTimeBtn;
-      accClearBtn.addEventListener("click", handlerOnClearTimeBtn); // Firing the event listener on click and calling the function handlerOnClearTimeBtn;
-
-      //=====////=====// Ending of firing the even listeners on a click. //=====////=====//
-
-      //////*******************************************************************************************************//////
-      //////*******************************************************************************************************//////
-    </script>
+   <script src="index.js"></script>
   </body>
 </html>
